[package]
name = "game-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
egui = "0.19.0"
egui-macroquad = "0.12.0"
glam = { version = "0.21.3", features = ["serde"] }
itertools = "0.10.5"
macroquad = "0.3.25"
# nanoserde = "0.1.32"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"

