[package]
name = "game-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
anymap = "0.12.1"
crossbeam = "0.8.2"
egui = "0.19.0"
egui-macroquad = "0.12.0"
git-version = "0.3.5"
glam = { version = "0.21.3", features = ["serde"] }
hecs = "0.9.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
macroquad = "0.3.25"
macroquad-particles = "0.1.1"
nalgebra = { version = "0.31.4", features = ["convert-glam021", "glam021"] }
notify = "5.0.0"
once_cell = "1.17.0"
parking_lot = "0.12.1"
parry2d = "0.11.0"
pollster = "0.2.5"
rapier2d = "0.16.1"
# nanoserde = "0.1.32"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
